--- a/member.html
+++ b/member.html
@@ -42,7 +42,7 @@
       <div class="col harf">
         <h2>Research Student</h2>
         <img src="images/icon_wakaba.jpg" alt="Wakaba">
-	<p>新学员。梦想是成为独立游戏开发者哦。</p> 
+	<p>新学员。梦想是成为独立游戏开发者。</p> 
       </div>
     </div>
 
